@@ -20,3 +20,4 @@
 21.08.2003	m. fuchs	working start menu; beginning of tray notification area
 						Start menu popup is now closed when clicking in another window.
 22.08.2003	m. fuchs	implemented clock display in tray notification area
+						implemented quick launch bar
